--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,8 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+/.metadata/
+CJ-01/.classpath
+CJ-01/.project
+CJ-01/.settings/org.eclipse.jdt.core.prefs
+CJ-01/.settings/org.eclipse.core.resources.prefs
